fdo#86284 Make "Hypothesized Mean Difference" as parameter in t-test

(cherry picked from commit 6b30907a926890f835c094a5afdf4c0e6d8a1d19)

Change-Id: I268495b76a1b1ffb09cf21a0fd53d9f1f1bc4957